add API to search book by author name
